@@ -10,7 +10,7 @@
     <input type="hidden" name="uids" value=""/>
     <input type="hidden" name="facetedQuery" value=""/>
     <input type="hidden" name="mailinglist_name" value=""/>
-    <input tal:condition="view/displayStoreAsAnnexSection" type="hidden" name="store_as_annex_uid" value=""/>
+    <input tal:condition="view/displayStoreAsAnnexSection" type="hidden" name="store_as_annex" value="0"/>
 
     <ul class="pod-template">
         <li tal:repeat="infos view/get_links_info">
@@ -55,9 +55,9 @@
         <tal:comment replace="nothing">XXX Added by PloneMeting : store generated document as annex.</tal:comment>
         <tal:store_as_annex condition="view/displayStoreAsAnnexSection">
             <tal:defines define="store_as_annex_uid infos/store_as_annex_uid"
-                         condition="python: store_as_annex_uid and view.may_store_as_annex(infos['template_uid'], store_as_annex_uid)">
+                         condition="python: store_as_annex_uid and view.may_store_as_annex(infos['template_uid'])">
                 <a style="cursor: pointer"
-                   tal:attributes="onclick string:event.preventDefault();;javascript:$(this).parents('form')[0].store_as_annex_uid.value='${store_as_annex_uid}';;javascript:$(this).parents('form')[0].target='_self';;generatePodDocument('${infos/template_uid}','${infos/output_format}', this);;">
+                   tal:attributes="onclick string:event.preventDefault();;javascript:$(this).parents('form')[0].store_as_annex.value='1';;javascript:$(this).parents('form')[0].target='_self';;generatePodDocument('${infos/template_uid}','${infos/output_format}', this);;">
                     <img src="store_as_annex.png"
                          tal:attributes="src string:${view/portal_url}/store_as_annex.png;
                                          title python: view.get_store_as_annex_title_msg(infos['store_as_annex_title'])"
