@@ -333,10 +333,10 @@ class PloneMeetingTestingHelpers:
         cfg = self.meetingConfig
         pod_template = cfg.podtemplates.itemTemplate
         annex_type = cfg.annexes_types.item_annexes.get('item-annex')
-        pod_template.store_as_annex = [annex_type.UID()]
+        pod_template.store_as_annex = annex_type.UID()
         self.request.set('template_uid', pod_template.UID())
         self.request.set('output_format', 'odt')
-        self.request.set('store_as_annex_uid', annex_type.UID())
+        self.request.set('store_as_annex', '1')
         # create an item
         original_member_id = self.member.getId()
         self.changeUser('pmCreator1')
