@@ -462,10 +462,7 @@ class testViews(PloneMeetingTestCase):
         self.changeUser('pmCreator1')
         pod_template, annex_type, item = self._setupStorePodAsAnnex()
         # remove defined store_as_annex for now
-        pod_template.store_as_annex = []
-
-        # no store_as_annex for now
-        self.assertEqual(pod_template.store_as_annex, [])
+        pod_template.store_as_annex = None
 
         # the document-generation view
         view = item.restrictedTraverse('@@document-generation')
@@ -479,7 +476,7 @@ class testViews(PloneMeetingTestCase):
         self.assertRaises(Unauthorized, view)
 
         # now correctly define template.store_as_annex and try to store
-        pod_template.store_as_annex = [annex_type.UID()]
+        pod_template.store_as_annex = annex_type.UID()
         self.assertEqual(get_annexes(item), [])
         url = view()
         # after call to view(), user is redirected to the annexes table view
@@ -523,6 +520,9 @@ class testViews(PloneMeetingTestCase):
         # by default, template Title is used if nothing define on
         # pod_template.store_as_annex_title_expr
         self.assertEqual(pod_template.store_as_annex_title_expr, u'')
+        # set store_as_annex_title_expr to None to check, it is the case when
+        # field is empty and saved in the UI
+        pod_template.store_as_annex_title_expr = None
         view()
         annex = get_annexes(item)[0]
         self.assertEqual(annex.Title(), pod_template.Title())
@@ -534,6 +534,33 @@ class testViews(PloneMeetingTestCase):
         view()
         annex = get_annexes(item)[0]
         self.assertEqual(annex.Title(), 'Meeting item (generated by pmManager)')
+
+    def test_pm_StorePodTemplateAsAnnexWrongConfig(self):
+        """As we can not validate field ConfigurablePODTemplate.store_as_annex to
+           select an annex_type of a POD template that will be generated on correct portal_type,
+           so we can select an item annex_type for a POD template that will be generated
+           on an advice for example, we manage this while storing the annex with a clear message."""
+        cfg = self.meetingConfig
+        pod_template, annex_type, item = self._setupStorePodAsAnnex()
+        # change pod_template.store_as_annex to use a meeting related annex_type
+        meeting_annex_type = cfg.annexes_types.meeting_annexes.get(self.annexFileTypeMeeting)
+        pod_template.store_as_annex = meeting_annex_type.UID()
+        # clear portal messages
+        IStatusMessage(self.request).show()
+        self.assertEqual(IStatusMessage(self.request).show(), [])
+        self.changeUser('pmManager')
+        # the document-generation view
+        view = item.restrictedTraverse('@@document-generation')
+        # does not break but do nothing but adding a portal message
+        store_podtemplate_as_annex_wrong_annex_type_on_pod_template = translate(
+            u'store_podtemplate_as_annex_wrong_annex_type_on_pod_template',
+            domain='PloneMeeting',
+            context=self.request)
+        view()
+        messages = IStatusMessage(self.request).show()
+        self.assertEqual(
+            messages[0].message,
+            store_podtemplate_as_annex_wrong_annex_type_on_pod_template)
 
     def test_pm_ItemMoreInfos(self, ):
         '''Test the @@item-more-infos view, especially getItemsListVisibleFields
